--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -10,10 +10,12 @@
   color: var(--color-black);
   margin-right: 93px;
 }
+
 .logo__primary-color {
   color: var(--color-blue);
 }
-.footer-logo {
+
+.logo__footer {
   color: var(--color-white);
   font-family: Raleway;
   font-weight: 700;
