--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -37,9 +37,6 @@ img {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  /* align-items: center; */
-}
-.container {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -48,12 +45,11 @@ img {
   text-decoration: none;
   color: var(--color-black);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--color-blue);
+  }
 }
 .list {
   list-style: none;
-}
-
-.link:hover,
-.link:focus {
-  color: var(--color-blue);
 }
