--- a/sass/base/_modal-form.scss
+++ b/sass/base/_modal-form.scss
@@ -9,7 +9,7 @@
   transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal {
+.modal-window {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -22,7 +22,7 @@
   border-radius: 4px;
   padding: 40px;
 }
-.close-btn {
+.modal-window__close-btn-border {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -33,8 +33,13 @@
   background-color: transparent;
   cursor: pointer;
   padding: 0;
+  &:hover .modal-window__close-btn,
+  &:focus .modal-window__close-btn {
+    fill: var(--color-blue);
+  }
 }
-.btn-close {
+
+.modal-window__close-btn {
   fill: black;
   justify-content: center;
   align-items: center;
@@ -42,17 +47,13 @@
   margin: auto;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.close-btn:hover .btn-close,
-.close-btn:focus .btn-close {
-  fill: var(--color-blue);
-}
 
 .modal-form {
   display: flex;
   flex-direction: column;
 }
 
-.modal-form-head {
+.modal-form__head {
   display: block;
   font-size: 20px;
   line-height: 1.15;
@@ -62,7 +63,7 @@
   margin-bottom: 12px;
 }
 
-.modal-form-field {
+.modal-form__field {
   font-size: 12px;
   line-height: 1.2;
   color: var(--color-grey);
@@ -70,13 +71,13 @@
   margin-bottom: 10px;
 }
 
-.modal-form-input-wrapper {
+.modal-form__input-wrapper {
   position: relative;
   display: block;
   padding-top: 4px;
 }
 
-.modal-form-input {
+.modal-form__input {
   font-size: 16px;
   width: 100%;
   height: 40px;
@@ -84,14 +85,22 @@
   border-radius: 4px;
   padding-left: 42px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus {
+    outline: none;
+    border-color: var(--color-blue);
+  }
+  &:focus + .modal-form__icon {
+    fill: var(--color-blue);
+  }
+  &:focus:not(:placeholder-shown):valid {
+    border-color: green;
+  }
+  &:focus:not(:placeholder-shown):invalid {
+    border-color: red;
+  }
 }
 
-.modal-form-input:focus {
-  outline: none;
-  border-color: var(--color-blue);
-}
-
-.modal-form-icon {
+.modal-form__icon {
   position: absolute;
   top: 50%;
   left: 12px;
@@ -103,11 +112,7 @@
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-input:focus + .modal-form-icon {
-  fill: var(--color-blue);
-}
-
-.modal-form-message {
+.modal-form__message {
   font-size: 16px;
   width: 100%;
   height: 120px;
@@ -117,27 +122,17 @@
   margin-top: 8px;
   padding: 12px 16px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus {
+    outline: none;
+    border-color: var(--color-blue);
+  }
+  &::placeholder {
+    color: var(--color-grey);
+    opacity: 50%;
+  }
 }
 
-.modal-form-message:focus {
-  outline: none;
-  border-color: var(--color-blue);
-}
-
-.modal-form-message::placeholder {
-  color: var(--color-grey);
-  opacity: 50%;
-}
-
-.modal-form-input:focus:not(:placeholder-shown):valid {
-  border-color: green;
-}
-
-.modal-form-input:focus:not(:placeholder-shown):invalid {
-  border-color: red;
-}
-
-.modal-form-policy-label {
+.modal-form__policy-label {
   display: flex;
   align-items: center;
   font-size: 12px;
@@ -145,20 +140,19 @@
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--color-grey);
+  &::before {
+    display: block;
+    content: "";
+    width: 18px;
+    height: 18px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 2px;
+    cursor: pointer;
+    margin-right: 10px;
+  }
 }
 
-.modal-form-policy-label::before {
-  display: block;
-  content: "";
-  width: 18px;
-  height: 18px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 2px;
-  cursor: pointer;
-  margin-right: 10px;
-  /* background-color: tomato; */
-}
-.modal-form-icon-checkbox {
+.modal-form__policy-label .modal-form__icon-checkbox {
   width: 17px;
   height: 17px;
   cursor: pointer;
@@ -167,22 +161,22 @@
   fill: white;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-policy-link {
+.modal-form__policy-link {
   color: var(--color-blue);
 }
-.modal-form-checkbox-wrapper {
+.modal-form__checkbox-wrapper {
   position: relative;
   margin-bottom: 20px;
 }
 
-.modal-form-checkbox:checked ~ .modal-form-policy-label::before {
+.modal-form__checkbox:checked ~ .modal-form__policy-label::before {
   background-color: var(--color-blue);
 }
 
-.modal-form-checkbox:focus ~ .modal-form-policy-label::before {
+.modal-form__checkbox:focus ~ .modal-form__policy-label::before {
   outline: 2px solid blue;
 }
-.modal-form-btn {
+.modal-form__btn {
   font-weight: bold;
   font-size: 16px;
   align-items: center;
@@ -197,11 +191,11 @@
   border: none;
   letter-spacing: 0.06em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form-btn:focus,
-.modal-form-btn:hover {
-  color: var(--color-black);
-  background-color: lightblue;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  &:focus,
+  &:hover {
+    color: var(--color-black);
+    background-color: lightblue;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
