--- a/sass/components/_company-contacts.scss
+++ b/sass/components/_company-contacts.scss
@@ -1,12 +1,20 @@
-.contact-list {
+.contact__list {
   display: block;
   display: flex;
   margin-left: auto;
 }
-.contact-item:not(:last-child) {
-  margin-right: 40px;
+
+.contact__item {
+  &:not(:last-child) {
+    margin-right: 40px;
+  }
+  &:hover .contact__icon,
+  &:focus .contact__icon {
+    fill: var(--color-blue);
+  }
 }
-.contact-link {
+
+.contact__link {
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -14,12 +22,9 @@
   color: var(--color-grey);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-icon {
+
+.contact__icon {
   margin-right: 10px;
   fill: currentColor;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contact-item:hover .contact-icon,
-.contact-item:focus .contact-icon {
-  fill: var(--color-blue);
 }
