--- a/sass/components/_order-btn.scss
+++ b/sass/components/_order-btn.scss
@@ -1,4 +1,4 @@
-.btn {
+.order-btn {
   background-color: var(--color-blue);
   color: var(--color-white);
   font-weight: 700;
@@ -6,10 +6,7 @@
   line-height: 1.87;
   border-radius: 4px;
   cursor: pointer;
-  justify-content: center;
   margin-top: 30px;
-}
-.order {
   align-items: center;
   justify-content: center;
   display: block;
@@ -17,13 +14,12 @@
   margin-right: auto;
   padding: 10px 32px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
   border: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.order:focus,
-.order:hover {
-  color: var(--color-black);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  &:focus,
+  &:hover {
+    color: var(--color-black);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
