--- a/sass/components/_selectors-btn.scss
+++ b/sass/components/_selectors-btn.scss
@@ -17,14 +17,15 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--color-white);
+    background-color: var(--color-blue);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
-.selectors__btn:hover,
-.selectors__btn:focus {
-  color: var(--color-white);
-  background-color: var(--color-blue);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+
 .selectors {
   padding-top: 94px;
   justify-content: center;
@@ -35,6 +36,10 @@
   margin: auto;
   padding-bottom: 50px;
 }
-.selectors > .list:not(:last-child) {
-  margin-right: 8px;
+
+.selectors__list {
+  list-style: none;
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
 }
