--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -8,25 +8,30 @@
   line-height: 42px;
   letter-spacing: 0.03em;
 }
-.clients-title {
+
+.clients__title {
   font-size: 36px;
   margin: auto;
 }
-.clients-link-list {
+
+.clients__list {
   justify-content: center;
   display: flex;
 }
-.clients__item:not(:last-child) {
-  margin-right: 30px;
-}
+
 .clients__item {
   margin-top: 50px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
+
 .clients__icon {
   padding: auto;
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .clients__link {
   border: 1px solid #afb1b8;
   box-sizing: border-box;
@@ -38,14 +43,13 @@
   align-items: center;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients__link:hover .clients__icon,
-.clients__link:focus .clients__icon {
-  fill: var(--color-blue);
-}
-.clients__link:hover,
-.clients__link:focus {
-  fill: var(--color-blue);
-  border: 1px solid var(--color-blue);
+  &:hover .clients__icon,
+  &:focus .clients__icon {
+    fill: var(--color-blue);
+  }
+  &:hover,
+  &:focus {
+    fill: var(--color-blue);
+    border: 1px solid var(--color-blue);
+  }
 }
