--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,11 +1,12 @@
-.footer-section {
+.footer__section {
   background-color: #2f303a;
 }
-.div-footer {
+
+.footer__flex {
   display: flex;
-  /* flex-direction: row; */
 }
-.footer-container {
+
+.footer__container {
   padding-top: 60px;
   padding-bottom: 60px;
   width: 1200px;
@@ -14,6 +15,7 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 .adress {
   font-style: normal;
   font-size: 14px;
@@ -21,11 +23,12 @@
   color: var(--color-white);
   margin-bottom: 9px;
 }
-.mb9px {
+
+.adress__margin {
   margin-bottom: 9px;
 }
 
-.link-footer {
+.link__footer {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
@@ -33,16 +36,18 @@
   line-height: 1.71;
   margin-bottom: 3px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--color-blue);
+  }
 }
-.link-footer:hover,
-.link-footer:focus {
-  color: var(--color-blue);
-}
-.footer-form-container {
+
+.footer-form__container {
   padding-top: 12px;
   margin-left: 93px;
 }
-.footer-form-input {
+
+.footer-form__input {
   width: 358px;
   background-color: transparent;
   color: var(--color-white);
@@ -54,10 +59,10 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 }
-.spam-btn {
+
+.footer-form__btn {
   fill: white;
   cursor: pointer;
-  // margin-top: 33px;
   margin-left: 12px;
   height: 50px;
   width: 200px;
@@ -77,18 +82,17 @@
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--color-blue);
+    color: var(--color-blue);
+    background-color: var(--color-innative-btn);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
-.spam-btn:hover,
-.spam-btn:focus {
-  fill: var(--color-blue);
-  color: var(--color-blue);
-  background-color: var(--color-innative-btn);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.join {
+.footer-form__title {
   text-transform: uppercase;
   display: flex;
   display: block;
@@ -98,4 +102,8 @@
   letter-spacing: 0.03em;
   margin-bottom: 20px;
   color: var(--color-white);
+}
+.footer-form__list {
+  padding-top: 12px;
+  margin-left: 70px;
 }
