--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,15 +4,17 @@
   align-items: center;
 }
 
-.nav-list {
+.nav__list {
   font-weight: 500;
   display: flex;
   align-items: center;
 }
-.nav-item:not(:last-child) {
+
+.nav__item:not(:last-child) {
   margin-right: 50px;
 }
-.nav-link {
+
+.nav__link {
   padding-top: 25px;
   padding-bottom: 33px;
 }
@@ -20,21 +22,22 @@
 .active {
   color: var(--color-blue);
   position: relative;
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: 0;
+    background-color: var(--color-blue);
+    display: inline-block;
+    border-radius: 2px;
+    margin: 0;
+    padding: 0;
+  }
 }
-.active:after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  left: 0;
-  bottom: 0;
-  background-color: var(--color-blue);
-  display: inline-block;
-  border-radius: 2px;
-  margin: 0;
-  padding: 0;
-}
+
 .head-border {
   border-bottom: 1px solid #ececec;
 }
