--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,10 +2,9 @@
 @import "./utils/visually-hidden";
 @import "./layout/header";
 @import "./components/logo";
-@import "./components/btn";
 @import "./components/company-contacts";
 @import "./layout/hero";
-@import "./components/btn-order";
+@import "./components/order-btn";
 @import "./layout/feature";
 @import "./layout/advantages";
 @import "./layout/team";
@@ -16,3 +15,4 @@
 @import "./components/social-links";
 @import "./layout/clients";
 @import "./base/modal-form";
+@import "./utils/mixins";
